--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3783,3 +3783,44 @@ input, select, textarea {
 			}
 
 		}
+
+		.collage-container {
+			position: relative;
+			width: 400px;
+			height: 400px;
+		}
+		
+		.collage-image {
+			position: absolute;
+			border: 2px solid white;
+			box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+		}
+		
+		.collage-image:nth-child(1) {
+			top: 0;
+			left: 0;
+			width: 200px;
+			height: 200px;
+		}
+		
+		.collage-image:nth-child(2) {
+			top: 0;
+			right: 0;
+			width: 200px;
+			height: 200px;
+		}
+		
+		.collage-image:nth-child(3) {
+			bottom: 0;
+			left: 0;
+			width: 200px;
+			height: 200px;
+		}
+		
+		.collage-image:nth-child(4) {
+			bottom: 0;
+			right: 0;
+			width: 200px;
+			height: 200px;
+		}
+		
